--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>React-elastic-modal example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <style>
     body {
         background: url('bg.jpg');
