--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
         background: url('bg.jpg');
-        background-size: 'cover';
+        background-size: cover;
     }
 
    .button--open {
