--- a/example/index.html
+++ b/example/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <style>
+    html,body{
+        min-height: 100%;
+    }
     body {
         background: url('bg.jpg');
         background-size:cover;
+        background-repeat: no-repeat;
     }
 
    .button--open {
